# gg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.ac  fetch-submodules.sh
cmake/: FindCRYPTOPP.cmake
contrib/: build-cryptopp.sh  build-openssl.sh  get-protobuf.sh  patch-hiredis.sh
examples/: Makefile.am
examples/dynamic-value/: create-thunk.sh  fib.cc
examples/echo-python/: create.sh  echo.py
examples/fib-python/: fib.py  init.sh  sum.py
examples/fibonacci/: Makefile.am
examples/marabou/: .gitignore
examples/sleep/: make-test.sh
src/execution/: CMakeLists.txt  engine_lambda.cc  reductor.cc  reductor.hh  response.hh
src/frontend/: .gitignore  CMakeLists.txt  Makefile.am  gg-bad-hash.cc  gg-collect.cc  gg-create-thunk.cc  gg-describe.cc  gg-execute-server.cc  gg-execute.cc  gg-force.cc  gg-meow-worker.cc
src/net/: CMakeLists.txt
src/protobufs/: CMakeLists.txt  thunk.proto
src/remote/: CMakeLists.txt  create-function.py  create-gcloud-function.sh
src/remote/common/: ggpaths.py
src/remote/gcloud_function/: main.py
src/remote/lambda_function/: main.py
src/thunk/: CMakeLists.txt  factory.cc  factory.hh  ggutils.cc  ggutils.hh  graph.cc  graph.hh  thunk.cc  thunk.hh
src/util/: CMakeLists.txt  base64.cc  digest.cc  hex.cc  poller.cc  temp_dir.cc
tests/: Makefile.am  fib_python.test  marabou.test  non_empty_error.test  sleep.test
tools/pygg/: .gitignore  Makefile  README.md  fib.py  pygg.py  trib.py
tools/pygg/examples/: add_anon.py  add_str  fib.py  fib_bin.py  fib_files.py  fib_split.py  fib_split_call.py  fib_split_default.py  trib.py
tools/pygg/test/: test_examples.py
