macro(add_gg_exec)
    set(_args ${ARGV})
    list(GET _args 0 _exe)
    add_executable(${_exe} ${_exe}.cc)
    list(REMOVE_AT _args 0)
    foreach(_lib ${_args})
        target_link_libraries(${_exe} PRIVATE ${_lib})
    endforeach()
    set_target_properties(${_exe} PROPERTIES LINK_FLAGS_RELEASE "-static -s")
endmacro()

add_gg_exec(gg-init util)
add_gg_exec(gg-hash thunk)
add_gg_exec(gg-collect thunk)
add_gg_exec(gg-create-thunk thunk)
add_gg_exec(gg-describe thunk)
add_gg_exec(gg-execute-server execution net protobufs execution thunk)
add_gg_exec(gg-execute execution net storage thunk)
add_gg_exec(gg-force-and-run execution)
add_gg_exec(gg-force execution)
add_gg_exec(gg-get storage net thunk)
add_gg_exec(gg-infer util thunk)
add_gg_exec(gg-meow-worker protobufs net thunk execution util)
add_gg_exec(gg-mock thunk util trace)
add_gg_exec(gg-object-server net execution thunk util)
add_gg_exec(gg-put storage net thunk)
add_gg_exec(gg-s3-download net thunk)
add_gg_exec(gg-s3-upload net)
add_gg_exec(gg-thunksummary thunk)
add_gg_exec(gg-trace trace util)
add_gg_exec(gg util)
add_gg_exec(lambda-invoker net)
add_gg_exec(prune-file)
add_gg_exec(splice-lines)
